serpentine/src/snek/snapshots/serpentine__snek__tests__recursive_import_1.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
  x Importing module '<redacted-path>' failed
  |->   x Importing module '<redacted-path>' failed
  |      ,-[<redacted-path>:1:8]
  |    1 | import "./recursive_import_1.snek" as lib;
  |      :        ^^^^^^^^^^^^^|^^^^^^^^^^^^^
  |      :                     `-- In this import statement
  |      `----
  |   
  `-> compiler::circular_import
      
        x Circular import. Module <redacted-path> attempted to be imported while resolving.
      
   ,-[<redacted-path>:1:8]
 1 | import "./recursive_import_2.snek" as lib;
   :        ^^^^^^^^^^^^^|^^^^^^^^^^^^^
   :                     `-- In this import statement
   `----
