serpentine/src/snek/snapshots/serpentine__snek__tests__return_in_top_level.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::invalid_statement

  x return not allowed in module
   ,-[<redacted-path>:1:1]
 1 | return Image("rust:latest");
   : ^^^|^^
   :    `-- This statement is not allowed here
   `----
  help: Maybe you meant to use `export` instead?
