serpentine/src/snek/snapshots/serpentine__snek__tests__services_not_service.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::type_mismatch

  x Expected `service` got `container`
   ,-[<redacted-path>:2:7]
 1 | export DEFAULT = Image("...")
 2 |     > WithService(Image("..."), "...");
   :       ^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^^|
   :                      |               `-- Has type `container`
   :                      `-- In call to this node
   `----
