serpentine/src/snek/snapshots/serpentine__snek__tests__type_mismatch_builtin.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::type_mismatch

  x Expected `container` got `integer`
   ,-[<redacted-path>:1:18]
 1 | export DEFAULT = 1 > Exec("echo hello");
   :                  |   ^^^^^^^^|^^^^^^^^
   :                  |           `-- In call to this node
   :                  `-- Has type `integer`
   `----
