serpentine/src/snek/snapshots/serpentine__snek__tests__type_mismatch_custom.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::type_mismatch

  x Expected `container` got `string`
   ,-[<redacted-path>:2:20]
 1 | def Foo(value) {
 2 |     return value > Exec("echo hello");
   :                    ^^^^^^^^|^^^^^^^^
   :                            `-- In call to this node
 3 | }
 4 | 
 5 | export DEFAULT = Foo("Hello");
   :                  ^^^^^|^^^^^|
   :                       |     `-- Has type `string`
   :                       `-- In call to this function
   `----
