serpentine/src/snek/snapshots/serpentine__snek__tests__unexpected_eof.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
parsing::unexpected_token

  x Expected `identifier`
   ,-[<redacted-path>:1:13]
 1 | export foo =
   :             |
   :             `-- Got `end of file`
   `----
