serpentine/src/snek/snapshots/serpentine__snek__tests__unexpected_token.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
parsing::unexpected_token

  x Expected `identifier`
   ,-[<redacted-path>:1:9]
 1 | hello = export;
   :         ^^^|^^
   :            `-- Got `export`
   `----
