serpentine/src/snek/snapshots/serpentine__snek__tests__unknown_char.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
parsing::unknown_char

  x unknown character '$' encountered in source code
   ,-[<redacted-path>:1:9]
 1 | hello = $world;
   :         |
   :         `-- This character was not understood by the lexer
   `----
